--- a/admin/vercel.json
+++ b/admin/vercel.json
@@ -5,5 +5,22 @@
       "use": "@vercel/static-build",
       "config": { "distDir": "dist" }
     }
+  ],
+  "rewrites": [
+
+    {
+      "source": "/api/(.*)",
+      "destination": "https://restaurant-backend-06ce.onrender.com/api/$1"
+    },
+  
+    {
+      "source": "/images/(.*)",
+      "destination": "https://restaurant-backend-06ce.onrender.com/images/$1"
+    },
+   
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
   ]
 }
