--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,3 @@
 
 VITE_VAPID_PUBLIC_KEY=BBCgYSjO469pFebjGPXQwv8cULdpe2DQh0Te__Y1VGHpuh7JzBY_3i6_XlZhb23H1HNapgjzXYeBOj5Qrsokmfk
+VITE_API_URL= https://restaurant-backend-06ce.onrender.com
